# claude-monitor

./: CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: setup-branch-protection.sh
src/: analytics-ui.js  chart.js  index.html  main.js  plugins-ui.js  polling.js  sessions-ui.js  settings.js  style.css  utils.js
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  claude.rs  commands.rs  config.rs  cost.rs  main.rs  plugins.rs  sessions.rs  tray_icon.rs
